--- a/LocationModifier2/DistinguishChoices.xaml
+++ b/LocationModifier2/DistinguishChoices.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocationModifier2"
         mc:Ignorable="d"
-        Title="DistinguishChoices" Width="714" WindowStyle="None" WindowStartupLocation="CenterScreen" SizeToContent="Height" SizeChanged="Window_SizeChanged" ResizeMode="NoResize">
-    <Grid VerticalAlignment="Top">
-        <Grid x:Name="DistinguishChoicesGrid" Margin="0">
+        Title="DistinguishChoices" Width="714" WindowStyle="None" WindowStartupLocation="CenterScreen" SizeChanged="Window_SizeChanged" ResizeMode="NoResize" Height="480">
+    <Grid>
+        <Grid x:Name="DistinguishChoicesGrid">
             <Grid.RowDefinitions>
-                <RowDefinition/>
+                <RowDefinition Height="56"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid.Background>
@@ -19,10 +19,37 @@
                 </LinearGradientBrush>
             </Grid.Background>
             <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Height="32" Margin="10,10,0,0" TextWrapping="Wrap" Text="Choose the item you scanned" VerticalAlignment="Top" Width="368" Foreground="White" FontSize="24" FontFamily="Segoe UI Semilight"/>
-            <StackPanel x:Name="DistinguishChoicesHolder" Margin="10,47,10,0" VerticalAlignment="Top">
-                <Button x:Name="TemplateButton_Copy" Content="BLUE 10 PACK" Height="62" FontSize="32" FontFamily="Segoe UI Semilight" Background="#668C8C8C" BorderBrush="#668C8C8C" Foreground="White" Margin="4" Style="{DynamicResource Button.Trans}"/>
-            </StackPanel>
-            <Button x:Name="CancelButton" Content="Cancel" Grid.Row="1" Height="62" FontSize="32" FontFamily="Segoe UI Semilight" Background="#668C8C8C" BorderBrush="#668C8C8C" Foreground="White" Margin="14,4,14,10" Style="{DynamicResource Button.Trans}" Click="CancelButton_Click" Visibility="Collapsed"/>
+            <ScrollViewer Margin="0,1,0,0" Grid.Row="1" PanningMode="VerticalOnly">
+                <ScrollViewer.Template>
+                    <ControlTemplate TargetType="{x:Type ScrollViewer}">
+                        <Grid x:Name="Grid" Background="{TemplateBinding Background}">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition Width="Auto" MinWidth="58"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <Rectangle x:Name="Corner" Grid.Column="1" Fill="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Grid.Row="1"/>
+                            <ScrollContentPresenter x:Name="PART_ScrollContentPresenter" CanContentScroll="{TemplateBinding CanContentScroll}" CanHorizontallyScroll="False" CanVerticallyScroll="False" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" Grid.Column="0" Margin="{TemplateBinding Padding}" Grid.Row="0"/>
+                            <ScrollBar x:Name="PART_VerticalScrollBar" AutomationProperties.AutomationId="VerticalScrollBar" Cursor="Arrow" Grid.Column="1" Maximum="{TemplateBinding ScrollableHeight}" Minimum="0" Grid.Row="0" Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}" Value="{Binding VerticalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" ViewportSize="{TemplateBinding ViewportHeight}" Margin="2,0" Width="Auto"/>
+                            <ScrollBar x:Name="PART_HorizontalScrollBar" AutomationProperties.AutomationId="HorizontalScrollBar" Cursor="Arrow" Grid.Column="0" Maximum="{TemplateBinding ScrollableWidth}" Minimum="0" Orientation="Horizontal" Grid.Row="1" Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}" Value="{Binding HorizontalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" ViewportSize="{TemplateBinding ViewportWidth}" Height="Auto" Margin="0,0,0,-17"/>
+                        </Grid>
+                    </ControlTemplate>
+                </ScrollViewer.Template>
+                <Grid VerticalAlignment="Top">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="70"/>
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.Row="0 " x:Name="DistinguishChoicesHolder" Margin="10,0
+                                ,10,0" VerticalAlignment="Top">
+                        <Button x:Name="TemplateButton_Copy" Grid.Row="2" Content="BLUE 10 PACK" Height="62" FontSize="32" FontFamily="Segoe UI Semilight" Background="#668C8C8C" BorderBrush="#668C8C8C" Foreground="White" Margin="4" Style="{DynamicResource Button.Trans}"/>
+                    </StackPanel>
+                    <Button x:Name="CancelButton" Content="Cancel" Grid.Row="1" Height="62" FontSize="32" FontFamily="Segoe UI Semilight" Background="#668C8C8C" BorderBrush="#668C8C8C" Foreground="White" Margin="14,4,14,10" Style="{DynamicResource Button.Trans}" Click="CancelButton_Click" Visibility="Hidden"/>
+                </Grid>
+            </ScrollViewer>
         </Grid>
         <Button x:Name="TemplateButton" Content="BLUE 10 PACK" HorizontalAlignment="Left" Height="62" Margin="-373,-88,0,0" VerticalAlignment="Top" Width="700" FontSize="32" FontFamily="Segoe UI Semilight" Background="#668C8C8C" BorderBrush="#668C8C8C" Foreground="White" Style="{DynamicResource Button.Trans}"/>
 
