--- a/LocationModifier2/Dialogs/StockEntry2.xaml
+++ b/LocationModifier2/Dialogs/StockEntry2.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocationModifier2.Dialogs"
         mc:Ignorable="d"
-        Title="StockEntry2" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None" SizeToContent="WidthAndHeight">
+        Background="#FF0E0099" Title="StockEntry2" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None" SizeToContent="WidthAndHeight">
     <Viewbox>
-        <Grid Background="#FF0E0099" Width="450" Height="350">
+        <Grid Width="550" Height="450">
             <Grid.RowDefinitions>
-                <RowDefinition Height="39*"/>
-                <RowDefinition Height="53*"/>
-                <RowDefinition Height="0*"/>
-                <RowDefinition Height="358*"/>
+                <RowDefinition Height="31*"/>
+                <RowDefinition Height="41*"/>
+                <RowDefinition Height="14*"/>
+                <RowDefinition Height="264*"/>
             </Grid.RowDefinitions>
             <Grid>
                 <TextBlock x:Name="LoginTitle" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Please enter an amount" VerticalAlignment="Center" Foreground="White" FontSize="24"/>
@@ -45,12 +45,16 @@
                     <Button x:Name="KeypadEnter" Content="Enter" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" FontSize="24" Margin="1.5" Click="KeypadEnter_Click"/>
                 </UniformGrid>
                 <Button x:Name="CancelButton" Content="Cancel" Margin="0,10,26,0" Foreground="White" BorderBrush="{x:Null}" Background="#72919191" Click="CancelButton_Click" Grid.Row="1"/>
-                <StackPanel x:Name="ButtonPanel" HorizontalAlignment="Left" Height="211" Margin="10" VerticalAlignment="Top" Width="70">
+                <StackPanel x:Name="ButtonPanel" HorizontalAlignment="Left" Height="211" Margin="10,10,0,0" VerticalAlignment="Top" Width="74">
                     <Button x:Name="SetStock" Content="Set" Height="24" Margin="2" IsEnabled="False" Click="SetStock_Click"/>
                     <Button x:Name="MoveSomeStock" Content="Move Some" Height="24" Margin="2" IsEnabled="True" Click="MoveSomeStock_Click"/>
                     <Button x:Name="MoveAllStock" Content="Move All" Height="24" Margin="2" IsEnabled="True" Click="MoveAllStock_Click"/>
                 </StackPanel>
 
+            </Grid>
+            <Grid HorizontalAlignment="Left" Height="138" Margin="455,10,0,0" Grid.Row="3" VerticalAlignment="Top" Width="85">
+                <Button x:Name="AddButton" Content="Add" Margin="0,0,0,98" Click="AddButton_Click" FontSize="24"/>
+                <Button x:Name="Minus" Content="Minus" Margin="0,98,0,0" Click="Minus_Click" FontSize="24"/>
             </Grid>
 
 
