--- a/LocationModifier2/Dialogs/IssuesList.xaml
+++ b/LocationModifier2/Dialogs/IssuesList.xaml
@@ -39,7 +39,11 @@
                 <TextBlock x:Name="textBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Issues List" VerticalAlignment="Top" Foreground="White" FontSize="36" FontFamily="Segoe UI Semilight" Margin="10,10,0,0" Height="48" Width="155"/>
                 <Button x:Name="button" Content="Close Issues List" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,10" FontSize="20" Padding="10,6" Height="41" Width="164" Click="button_Click"/>
                 <TextBlock x:Name="ItemName" TextWrapping="Wrap" Text="Issues List" VerticalAlignment="Top" Foreground="White" FontSize="20" FontFamily="Segoe UI Semilight" Margin="10,58,10,0" Height="27"/>
-                <CheckBox x:Name="CheckBox1" Content="SendToPrepack" HorizontalAlignment="Left" Margin="34,199,0,0" VerticalAlignment="Top" Height="21" Width="98" Foreground="White" Click="CheckBox_Click"/>
+                <StackPanel HorizontalAlignment="Left" Height="100" Margin="74,168,0,0" VerticalAlignment="Top" Width="100">
+                    <RadioButton x:Name="ViewLocations" GroupName="Group1" Content="View Locations" Background="White" Foreground="White" Click="CheckBox_Click"/>
+                    <RadioButton x:Name="ResetOrder" GroupName="Group1" Content="Reset Order" Background="White" Foreground="White" Click="CheckBox_Click"/>
+                    <RadioButton GroupName="Group1" x:Name="SendToPrepack" Content="SendToPrepack" HorizontalAlignment="Left" Margin="0,0,-3,0" VerticalAlignment="Top" Height="21" Width="103" Foreground="White" Click="CheckBox_Click"/>
+                </StackPanel>
 
             </Grid>
         </Grid>
