--- a/LocationModifier2/Dialogs/IssuesList.xaml
+++ b/LocationModifier2/Dialogs/IssuesList.xaml
@@ -39,12 +39,25 @@
                 <TextBlock x:Name="textBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Issues List" VerticalAlignment="Top" Foreground="White" FontSize="36" FontFamily="Segoe UI Semilight" Margin="10,10,0,0" Height="48" Width="155"/>
                 <Button x:Name="button" Content="Close Issues List" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,10" FontSize="20" Padding="10,6" Height="41" Width="164" Click="button_Click"/>
                 <TextBlock x:Name="ItemName" TextWrapping="Wrap" Text="Issues List" VerticalAlignment="Top" Foreground="White" FontSize="20" FontFamily="Segoe UI Semilight" Margin="10,58,10,0" Height="27" MouseUp="ItemName_MouseUp" TouchUp="ItemName_TouchUp"/>
-                <StackPanel HorizontalAlignment="Left" Height="100" Margin="74,168,0,0" VerticalAlignment="Top" Width="100">
-                    <RadioButton x:Name="ViewLocations" GroupName="Group1" Content="View Locations" Background="White" Foreground="White" Click="CheckBox_Click"/>
-                    <RadioButton x:Name="ResetOrder" GroupName="Group1" Content="Reset Order" Background="White" Foreground="White" Click="CheckBox_Click"/>
-                    <RadioButton GroupName="Group1" x:Name="SendToPrepack" Content="SendToPrepack" HorizontalAlignment="Left" Margin="0,0,-3,0" VerticalAlignment="Top" Height="21" Width="103" Foreground="White" Click="CheckBox_Click"/>
-                    <RadioButton GroupName="Group1" x:Name="OtherWarehouse" Content="OtherWarehouse" VerticalAlignment="Top" Height="21" Foreground="White" Click="CheckBox_Click"/>
+                <StackPanel HorizontalAlignment="Left" Height="127" Margin="10,90,0,0" VerticalAlignment="Top" Width="132">
+                    <RadioButton x:Name="ViewLocations" GroupName="Group1" Content="View Locations" Background="White" Foreground="White" Click="CheckBox_Click" Height="30"/>
+                    <RadioButton x:Name="ResetOrder" GroupName="Group1" Content="Reset Order" Background="White" Foreground="White" Click="CheckBox_Click" Height="30"/>
+                    <RadioButton GroupName="Group1" x:Name="SendToPrepack" Content="SendToPrepack" HorizontalAlignment="Left" VerticalAlignment="Top" Height="30" Width="132" Foreground="White" Click="CheckBox_Click"/>
+                    <RadioButton GroupName="Group1" x:Name="OtherWarehouse" Content="OtherWarehouse" VerticalAlignment="Top" Height="30" Foreground="White" Click="CheckBox_Click"/>
 
+                </StackPanel>
+                <StackPanel HorizontalAlignment="Left" Height="100" Margin="10,222,0,0" VerticalAlignment="Top" Width="113" RenderTransformOrigin="0.5,0.5">
+                    <StackPanel.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleY="0.374"/>
+                            <RotateTransform/>
+                            <TranslateTransform Y="0.327"/>
+                        </TransformGroup>
+                    </StackPanel.RenderTransform>
+                    <RadioButton GroupName="Units" x:Name="Unit14Button" Content="Unit 14" Height="26" IsChecked="True" Click="Unit14Button_Click" Foreground="White"/>
+                    <RadioButton GroupName="Units" x:Name="Unit1Button" Content="Unit 1" Height="26" Click="Unit14Button_Click" Foreground="White"/>
+                    <RadioButton GroupName="Units" x:Name="AllUnitsButton" Content="All Units" Height="26" Click="Unit14Button_Click" Foreground="White"/>
                 </StackPanel>
 
             </Grid>
