Fixed various formatting issues
Also added string interpolation to several methods

--- a/LocationModifier2/Dialogs/IssuesList.xaml
+++ b/LocationModifier2/Dialogs/IssuesList.xaml
@@ -5,13 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocationModifier2.Dialogs"
         mc:Ignorable="d"
-        Title="IssuesList" Height="480" Width="800" Background="#E0000000" AllowsTransparency="True" WindowStyle="None" WindowState="Maximized">
+        Title="IssuesList" Height="480" Width="800" Background="#E0000000" AllowsTransparency="True" WindowStyle="None"
+        WindowState="Maximized">
     <Viewbox>
         <Grid Width="800" Height="480">
             <Grid Margin="20,20,0,20">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="79*"/>
-                    <ColumnDefinition Width="181*"/>
+                    <ColumnDefinition Width="79*" />
+                    <ColumnDefinition Width="181*" />
                 </Grid.ColumnDefinitions>
                 <Grid x:Name="scroll" Grid.Column="1" Background="White">
                     <ScrollViewer x:Name="IssueViewer" PanningMode="Both" MinWidth="500">
@@ -19,45 +20,81 @@
                             <ControlTemplate TargetType="{x:Type ScrollViewer}">
                                 <Grid x:Name="Grid" Background="{TemplateBinding Background}">
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition/>
-                                        <ColumnDefinition Width="Auto" MinWidth="40"/>
+                                        <ColumnDefinition />
+                                        <ColumnDefinition Width="Auto" MinWidth="40" />
                                     </Grid.ColumnDefinitions>
                                     <Grid.RowDefinitions>
-                                        <RowDefinition Height="*"/>
-                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="*" />
+                                        <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
-                                    <Rectangle x:Name="Corner" Grid.Column="1" Fill="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Grid.Row="1"/>
-                                    <ScrollContentPresenter x:Name="PART_ScrollContentPresenter" CanContentScroll="{TemplateBinding CanContentScroll}" CanHorizontallyScroll="False" CanVerticallyScroll="False" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" Grid.Column="0" Margin="{TemplateBinding Padding}" Grid.Row="0"/>
-                                    <ScrollBar x:Name="PART_VerticalScrollBar" AutomationProperties.AutomationId="VerticalScrollBar" Cursor="Arrow" Grid.Column="1" Maximum="{TemplateBinding ScrollableHeight}" Minimum="0" Grid.Row="0" Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}" Value="{Binding VerticalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" ViewportSize="{TemplateBinding ViewportHeight}" Width="Auto"/>
-                                    <ScrollBar x:Name="PART_HorizontalScrollBar" AutomationProperties.AutomationId="HorizontalScrollBar" Cursor="Arrow" Grid.Column="0" Maximum="{TemplateBinding ScrollableWidth}" Minimum="0" Orientation="Horizontal" Grid.Row="1" Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}" Value="{Binding HorizontalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" ViewportSize="{TemplateBinding ViewportWidth}" Height="Auto" Margin="0,0,0,-17"/>
+                                    <Rectangle x:Name="Corner" Grid.Column="1"
+                                               Fill="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
+                                               Grid.Row="1" />
+                                    <ScrollContentPresenter x:Name="PART_ScrollContentPresenter"
+                                                            CanContentScroll="{TemplateBinding CanContentScroll}"
+                                                            CanHorizontallyScroll="False" CanVerticallyScroll="False"
+                                                            ContentTemplate="{TemplateBinding ContentTemplate}"
+                                                            Content="{TemplateBinding Content}" Grid.Column="0"
+                                                            Margin="{TemplateBinding Padding}" Grid.Row="0" />
+                                    <ScrollBar x:Name="PART_VerticalScrollBar"
+                                               AutomationProperties.AutomationId="VerticalScrollBar" Cursor="Arrow"
+                                               Grid.Column="1" Maximum="{TemplateBinding ScrollableHeight}" Minimum="0"
+                                               Grid.Row="0"
+                                               Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"
+                                               Value="{Binding VerticalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}"
+                                               ViewportSize="{TemplateBinding ViewportHeight}" Width="Auto" />
+                                    <ScrollBar x:Name="PART_HorizontalScrollBar"
+                                               AutomationProperties.AutomationId="HorizontalScrollBar" Cursor="Arrow"
+                                               Grid.Column="0" Maximum="{TemplateBinding ScrollableWidth}" Minimum="0"
+                                               Orientation="Horizontal" Grid.Row="1"
+                                               Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
+                                               Value="{Binding HorizontalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}"
+                                               ViewportSize="{TemplateBinding ViewportWidth}" Height="Auto"
+                                               Margin="0,0,0,-17" />
                                 </Grid>
                             </ControlTemplate>
                         </ScrollViewer.Template>
-                        <StackPanel x:Name="ActualAuditContainer" VerticalAlignment="Top" MinHeight="100"/>
+                        <StackPanel x:Name="ActualAuditContainer" VerticalAlignment="Top" MinHeight="100" />
                     </ScrollViewer>
                 </Grid>
-                <TextBlock x:Name="textBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Issues List" VerticalAlignment="Top" Foreground="White" FontSize="36" FontFamily="Segoe UI Semilight" Margin="10,10,0,0" Height="48" Width="155"/>
-                <Button x:Name="button" Content="Close Issues List" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,10" FontSize="20" Padding="10,6" Height="41" Width="164" Click="button_Click"/>
-                <TextBlock x:Name="ItemName" TextWrapping="Wrap" Text="Issues List" VerticalAlignment="Top" Foreground="White" FontSize="20" FontFamily="Segoe UI Semilight" Margin="10,58,10,0" Height="27" MouseUp="ItemName_MouseUp" TouchUp="ItemName_TouchUp"/>
-                <StackPanel HorizontalAlignment="Left" Height="127" Margin="10,90,0,0" VerticalAlignment="Top" Width="132">
-                    <RadioButton x:Name="ViewLocations" GroupName="Group1" Content="View Locations" Background="White" Foreground="White" Click="CheckBox_Click" Height="30"/>
-                    <RadioButton x:Name="ResetOrder" GroupName="Group1" Content="Reset Order" Background="White" Foreground="White" Click="CheckBox_Click" Height="30"/>
-                    <RadioButton GroupName="Group1" x:Name="SendToPrepack" Content="SendToPrepack" HorizontalAlignment="Left" VerticalAlignment="Top" Height="30" Width="132" Foreground="White" Click="CheckBox_Click"/>
-                    <RadioButton GroupName="Group1" x:Name="OtherWarehouse" Content="OtherWarehouse" VerticalAlignment="Top" Height="30" Foreground="White" Click="CheckBox_Click"/>
+                <TextBlock x:Name="textBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Issues List"
+                           VerticalAlignment="Top" Foreground="White" FontSize="36" FontFamily="Segoe UI Semilight"
+                           Margin="10,10,0,0" Height="48" Width="155" />
+                <Button x:Name="button" Content="Close Issues List" HorizontalAlignment="Left"
+                        VerticalAlignment="Bottom" Margin="10,0,0,10" FontSize="20" Padding="10,6" Height="41"
+                        Width="164" Click="Button_Click" />
+                <TextBlock x:Name="ItemName" TextWrapping="Wrap" Text="Issues List" VerticalAlignment="Top"
+                           Foreground="White" FontSize="20" FontFamily="Segoe UI Semilight" Margin="10,58,10,0"
+                           Height="27" MouseUp="ItemName_MouseUp" TouchUp="ItemName_TouchUp" />
+                <StackPanel HorizontalAlignment="Left" Height="127" Margin="10,90,0,0" VerticalAlignment="Top"
+                            Width="132">
+                    <RadioButton x:Name="ViewLocations" GroupName="Group1" Content="View Locations" Background="White"
+                                 Foreground="White" Click="CheckBox_Click" Height="30" />
+                    <RadioButton x:Name="ResetOrder" GroupName="Group1" Content="Reset Order" Background="White"
+                                 Foreground="White" Click="CheckBox_Click" Height="30" />
+                    <RadioButton GroupName="Group1" x:Name="SendToPrepack" Content="SendToPrepack"
+                                 HorizontalAlignment="Left" VerticalAlignment="Top" Height="30" Width="132"
+                                 Foreground="White" Click="CheckBox_Click" />
+                    <RadioButton GroupName="Group1" x:Name="OtherWarehouse" Content="OtherWarehouse"
+                                 VerticalAlignment="Top" Height="30" Foreground="White" Click="CheckBox_Click" />
 
                 </StackPanel>
-                <StackPanel HorizontalAlignment="Left" Height="100" Margin="10,222,0,0" VerticalAlignment="Top" Width="113" RenderTransformOrigin="0.5,0.5">
+                <StackPanel HorizontalAlignment="Left" Height="100" Margin="10,222,0,0" VerticalAlignment="Top"
+                            Width="113" RenderTransformOrigin="0.5,0.5">
                     <StackPanel.RenderTransform>
                         <TransformGroup>
-                            <ScaleTransform/>
-                            <SkewTransform AngleY="0.374"/>
-                            <RotateTransform/>
-                            <TranslateTransform Y="0.327"/>
+                            <ScaleTransform />
+                            <SkewTransform AngleY="0.374" />
+                            <RotateTransform />
+                            <TranslateTransform Y="0.327" />
                         </TransformGroup>
                     </StackPanel.RenderTransform>
-                    <RadioButton GroupName="Units" x:Name="Unit14Button" Content="Unit 14" Height="26" IsChecked="True" Click="Unit14Button_Click" Foreground="White"/>
-                    <RadioButton GroupName="Units" x:Name="Unit1Button" Content="Unit 1" Height="26" Click="Unit14Button_Click" Foreground="White"/>
-                    <RadioButton GroupName="Units" x:Name="AllUnitsButton" Content="All Units" Height="26" Click="Unit14Button_Click" Foreground="White"/>
+                    <RadioButton GroupName="Units" x:Name="Unit14Button" Content="Unit 14" Height="26" IsChecked="True"
+                                 Click="Unit14Button_Click" Foreground="White" />
+                    <RadioButton GroupName="Units" x:Name="Unit1Button" Content="Unit 1" Height="26"
+                                 Click="Unit14Button_Click" Foreground="White" />
+                    <RadioButton GroupName="Units" x:Name="AllUnitsButton" Content="All Units" Height="26"
+                                 Click="Unit14Button_Click" Foreground="White" />
                 </StackPanel>
 
             </Grid>
