--- a/LocationModifier2/Cool/ItemWindow.xaml
+++ b/LocationModifier2/Cool/ItemWindow.xaml
@@ -18,7 +18,7 @@
                 <RowDefinition/>
                 <RowDefinition Height="7*"/>
             </Grid.RowDefinitions>
-            <Grid Grid.Column="3" Background="Black" Margin="0,0,48,0">
+            <Grid Grid.Column="3" Background="Black" Margin="0,0,48,0" MouseUp="Grid_MouseUp" TouchUp="Grid_TouchUp">
                 <TextBlock x:Name="ShortSku" HorizontalAlignment="Center" TextWrapping="Wrap" Text="_" VerticalAlignment="Center" Foreground="White" FontSize="40" FontFamily="Segoe UI Semibold"/>
             </Grid>
             <Viewbox Grid.Column="2" Margin="10,0,10,3">
